holy great added

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html land="en-US">
+<html lang="en-US">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,7 +29,7 @@
             </section>
         </main>
         <aside>
-            <img src="https://www.churchofjesuschrist.org/imgs/b800f5245ce311fb987aabd6ee6b2230b7c8b04f/full/320%2C/0/default" width="200"> 
+            <img src="https://www.churchofjesuschrist.org/imgs/b800f5245ce311fb987aabd6ee6b2230b7c8b04f/full/320%2C/0/default" alt="Lima Peru Temple" width="200"> 
         </aside>
         <footer>
             😎Mitchel Romero😎
