--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" href="styles/styles.css">
         <title>Mitchel Carlos Romero Amaro | WDD 130</title>
+        <meta name="description" content="Hello, everyone. This page is the first one I have written in HTML. I am very excited about this wdd130 course, and I want to write more as an author under my name, Mitchel Romero.">
+        <meta name="author" content="Mitchel Romero">
     </head>
     <body>
         <header>
@@ -21,6 +23,11 @@
                 I am a science teacher at the high school. I have been married for 18 years and have two children:
                  the oldest is 15 years old and the youngest is 12 years old.</p>
         </main>
+        <aside>
+            <h2>Lima - Perú</h2>
+            <img src="images/machu_picchu.jpg" alt="Machu Picchu">
+            <p>Machu Picchu was declared one of the new seven wonders of the modern world in a ceremony held in Lisbon, Portugal, with the participation of one hundred million voters worldwide. This wonder of the world is located in the department of Cuzco - Peru</p>
+        </aside>
         <footer>
             <p>©2024 😎 Mitchel Romero 😎 Lima, Perú</p>
         </footer>
