--- a/wwr/about.html
+++ b/wwr/about.html
@@ -18,9 +18,9 @@
         </div>
         <div class="menu">
             <button>Index</button>
-            <button><a href="about.html">About</a></button>
-            <button><a href="trips.html">Trips</a></button>
-            <button><a href="contact.html">Contact</a></button>
+            <button>About</button>
+            <button>Trips</button>
+            <button>Contact</button>
         </div>
     </div>
     <header>
