--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bokor&family=Lacquer&display=swap" rel="stylesheet">
-    <title>Whitewhater Adventure</title>
+    <link rel="stylesheet" href="rafting.css">
+    <title class="title-lacquer">Whitewhater Adventure</title>
     
 </head>
 <body>
@@ -24,30 +25,30 @@
         </div>
     </div>
     <header>
-       <h1>White Water Rafting</h1> 
+       <h1 class="title-lacquer">White Water Rafting</h1> 
     </header>
     <main>
         <div class="container">
-            <p class="text">Dare to participate in this incredible rafting activity on the Urubamba River. You will be in contact with the beauty of nature and the landscapes of the Cusco mountains, with a lot of adventure and fun.
+            <p class="text, paragraph-bokor">Dare to participate in this incredible rafting activity on the Urubamba River. You will be in contact with the beauty of nature and the landscapes of the Cusco mountains, with a lot of adventure and fun.
                 During our full-day rafting tour on the Urubamba River we will run class II and III rapids and have a lot of fun with our crew and other participants for approximately 2.5 hours.
             </p>
             <img src="images/rafting1.jpg" alt="rafting1 image" width="400" height="230" class="image">
         </div>
         <div>
             <section>
-                <h2>History</h2>
+                <h2 class="title-lacquer">History</h2>
                 <div class="container">
-                    <p class="text-left">Dare to participate in this incredible rafting activity on the Urubamba River. You will be in contact with the beauty of nature and the landscapes of the Cusco mountains, with a lot of adventure and fun.
+                    <p class="text-left,paragraph-bokor">Dare to participate in this incredible rafting activity on the Urubamba River. You will be in contact with the beauty of nature and the landscapes of the Cusco mountains, with a lot of adventure and fun.
                             During our full-day rafting tour on the Urubamba River we will run class II and III rapids and have a lot of fun with our crew and other participants for approximately 2.5 hours.
                     </p>
                     <img src="images/rafting.jpg" alt="rafting" class="image">
-                    <p class="text-right">Dare to participate in this incredible rafting activity on the Urubamba River. You will be in contact with the beauty of nature and the landscapes of the Cusco mountains, with a lot of adventure and fun.
+                    <p class="text-right,paragraph-bokor">Dare to participate in this incredible rafting activity on the Urubamba River. You will be in contact with the beauty of nature and the landscapes of the Cusco mountains, with a lot of adventure and fun.
                             During our full-day rafting tour on the Urubamba River we will run class II and III rapids and have a lot of fun with our crew and other participants for approximately 2.5 hours.
                     </p>
                 </div>
             </section>
             <section>
-                <h2>Adventure Awaits You</h2>
+                <h2 class="title-lacquer">Adventure Awaits You</h2>
                 <div class="adventure">
                     <div class="rapids">
                         <img src="images/rafting11.jpg" alt="rafting" width="200" height="170">
