--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bokor&family=Lacquer&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="rafting.css">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/rafting.css">
     <title class="title-lacquer">Whitewhater Adventure</title>
     
 </head>
@@ -29,7 +29,7 @@
     </header>
     <main>
         <div class="container">
-            <p class="text, paragraph-bokor">Dare to participate in this incredible rafting activity on the Urubamba River. You will be in contact with the beauty of nature and the landscapes of the Cusco mountains, with a lot of adventure and fun.
+            <p class="text, paragraph-caveat">Dare to participate in this incredible rafting activity on the Urubamba River. You will be in contact with the beauty of nature and the landscapes of the Cusco mountains, with a lot of adventure and fun.
                 During our full-day rafting tour on the Urubamba River we will run class II and III rapids and have a lot of fun with our crew and other participants for approximately 2.5 hours.
             </p>
             <img src="images/rafting1.jpg" alt="rafting1 image" width="400" height="230" class="image">
@@ -38,11 +38,11 @@
             <section>
                 <h2 class="title-lacquer">History</h2>
                 <div class="container">
-                    <p class="text-left,paragraph-bokor">Dare to participate in this incredible rafting activity on the Urubamba River. You will be in contact with the beauty of nature and the landscapes of the Cusco mountains, with a lot of adventure and fun.
+                    <p class="text-left, paragraph-caveat">Dare to participate in this incredible rafting activity on the Urubamba River. You will be in contact with the beauty of nature and the landscapes of the Cusco mountains, with a lot of adventure and fun.
                             During our full-day rafting tour on the Urubamba River we will run class II and III rapids and have a lot of fun with our crew and other participants for approximately 2.5 hours.
                     </p>
                     <img src="images/rafting.jpg" alt="rafting" class="image">
-                    <p class="text-right,paragraph-bokor">Dare to participate in this incredible rafting activity on the Urubamba River. You will be in contact with the beauty of nature and the landscapes of the Cusco mountains, with a lot of adventure and fun.
+                    <p class="text-right, paragraph-caveat">Dare to participate in this incredible rafting activity on the Urubamba River. You will be in contact with the beauty of nature and the landscapes of the Cusco mountains, with a lot of adventure and fun.
                             During our full-day rafting tour on the Urubamba River we will run class II and III rapids and have a lot of fun with our crew and other participants for approximately 2.5 hours.
                     </p>
                 </div>
