--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Experience the thrill of rafting on stunning rivers with expert guides. Safe, personalized adventures for all skill levels. Book your trip today!">
+    <meta name="author" content="Mitchel Romero - Whitewhater Adventure">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title class="title-lacquer">Whitewhater Adventure</title>
+    <title class="title-lacquer">Whitewater Adventure - Guided Rafting Experts Since 1995</title>
     
 </head>
 <body>
