--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title class="title-lacquer">Whitewater Adventure - Guided Rafting Experts Since 1995</title>
+    <title class="title-lacquer">Guided Rafting Experts Since 1995</title>
     
 </head>
 <body>
