--- a/wwr/about.html
+++ b/wwr/about.html
@@ -19,12 +19,17 @@
         <div class="logo">
             <img src="images/skelletons.jpg" alt="Whitewhater Adventure">
         </div>
-        <div class="menu">
-            <button>Index</button>
-            <button>About</button>
-            <button>Trips</button>
-            <button>Contact</button>
-        </div>
+        <nav>
+            <div class="menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+       
     </div>
     <header>
        <h1 class="title-lacquer">White Water Rafting</h1> 
@@ -49,7 +54,7 @@
                     </p>
                 </div>
             </section>
-            <section>
+            <figure>
                 <h2 class="title-lacquer">Adventure Awaits You</h2>
                 <div class="adventure">
                     <div class="rapids">
@@ -68,7 +73,7 @@
                         <img src="images/rafting14.jpg" alt="rafting" width="200" height="170">
                     </div>
                 </div>
-            </section>    
+            </figure>    
         </div>
        
     </main>
