--- a/wwr/about.html
+++ b/wwr/about.html
@@ -54,26 +54,36 @@
                     </p>
                 </div>
             </section>
-            <figure>
+            <section>
                 <h2 class="title-lacquer">Adventure Awaits You</h2>
                 <div class="adventure">
-                    <div class="rapids">
-                        <img src="images/rafting11.jpg" alt="rafting" width="200" height="170">
-                    </div>
-                    <div class="rapids">
-                        <img src="images/rafting12.jpg" alt="rafting" width="200" height="170">
-                    </div>
-                    <div class="rapids">
-                        <img src="images/rafting13.jpg" alt="rafting" width="200" height="170">
-                    </div>
-                    <div class="rapids">
-                        <img src="images/rafting15.jpg" alt="rafting" width="200" height="170">
-                    </div>
-                    <div class="rapids">
-                        <img src="images/rafting14.jpg" alt="rafting" width="200" height="170">
-                    </div>
+                    <figure>
+                        <div class="rapids">
+                            <img src="images/rafting11.jpg" alt="rafting" width="200" height="170">
+                        </div>
+                    </figure>
+                    <figure>
+                        <div class="rapids">
+                            <img src="images/rafting12.jpg" alt="rafting" width="200" height="170">
+                        </div>
+                    </figure>
+                    <figure>
+                        <div class="rapids">
+                            <img src="images/rafting13.jpg" alt="rafting" width="200" height="170">
+                        </div>
+                    </figure>
+                    <figure>
+                        <div class="rapids">
+                            <img src="images/rafting15.jpg" alt="rafting" width="200" height="170">
+                        </div>
+                    </figure>
+                    <figure>
+                        <div class="rapids">
+                            <img src="images/rafting14.jpg" alt="rafting" width="200" height="170">
+                        </div>
+                    </figure>
                 </div>
-            </figure>    
+            </section>    
         </div>
        
     </main>
