--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -42,7 +42,14 @@
         <p class="paragraph-caveat">Phone: +51 930184947</p>
         <p class="paragraph-caveat">Email: <a href="mailto:">mitchroam@gmail.com</a></p>
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3451.396409174954!2d-76.88693998291322!3d-12.016076042231477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c3fc4cf4ae6f%3A0x87eb9883d11d33d0!2sCondominio%20Ribera%20de%20Santa%20Clara!5e0!3m2!1ses-419!2spe!4v1733695943393!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3451.396409174954!2d-76.88693998291322!3d-12.016076042231477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c3fc4cf4ae6f%3A0x87eb9883d11d33d0!2sCondominio%20Ribera%20de%20Santa%20Clara!5e0!3m2!1ses-419!2spe!4v1733695943393!5m2!1ses-419!2spe"
+            class="google-map"
+            width="600"
+            height="450"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </div>
     </div>
         
