--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -99,7 +99,7 @@
                 General Inquiry
             </label>
             <label>
-                <input Type="radio" name="purpose" value="reservation">
+                <input type="radio" name="purpose" value="reservation">
                 Reservation Quest
             </label>
             <label>
