--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -94,16 +94,16 @@
         <fieldset>
             <legend>The porpuse of the message</legend>
             <label>Please select an option</label>
-            <label>
-                <input type="radio" name="purpose" value="inquiry">
+            <label for="inquiry">
+                <input type="radio" id="inquiry"  name="purpose" value="inquiry">
                 General Inquiry
             </label>
-            <label>
-                <input type="radio" name="purpose" value="reservation">
+            <label for="reservation">
+                <input type="radio" id="reservation" name="purpose" value="reservation">
                 Reservation Quest
             </label>
-            <label>
-                <input type="radio" name="purpose" value="suggestion">
+            <label for="suggestion">
+                <input type="radio" id="suggestion" name="purpose" value="suggestion">
                 Website Suggestion
             </label>
             <label for="suscription">Please subscribe me to the monthly newsletter</label>
