--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="If you have any questions, do not hesitate to write to us">
+    <meta name="description" content="Contact Whitewater Adventure. If you have any questions, do not hesitate to write to us.">
     <meta name="author" content="Mitchel Romero - Whitewhater Adventure">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/rafting.css">
