--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=swap" rel="stylesheet">
-    <title>Contact us</title>
+    <title>Contact - Whitewhater</title>
     
 </head>
 <body>
