--- a/wwr/index.html
+++ b/wwr/index.html
@@ -11,8 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=swap" rel="stylesheet">
-   
-    <title>rapids</title>
+    <title>Rafting Perú</title>
     
 </head>
 <body>
