--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title>rapids</title>
+    <title>Trips Rafting</title>
     
 </head>
 <body>
