--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -35,58 +35,71 @@
     <h1 class="title-lacquer">White Water Rafting</h1>
     </header>
     <main>
-        <div class="container">
-            <p class="text, paragraph-caveat">Dare to participate in this incredible rafting activity on the Urubamba River. You will be in contact with the beauty of nature and the landscapes of the Cusco mountains, with a lot of adventure and fun.
-                During our full-day rafting tour on the Urubamba River we will run class II and III rapids and have a lot of fun with our crew and other participants for approximately 2.5 hours.
-            </p>
-            <img src="images/rafting1.jpg" alt="rafting1 image" width="400" height="230" class="image">
-        </div>
-        <div>
-            <section>
-                <h2 class="title-lacquer">History</h2>
-                <div class="container">
-                    <p class="text-left, paragraph-caveat">Dare to participate in this incredible rafting activity on the Urubamba River. You will be in contact with the beauty of nature and the landscapes of the Cusco mountains, with a lot of adventure and fun.
-                            During our full-day rafting tour on the Urubamba River we will run class II and III rapids and have a lot of fun with our crew and other participants for approximately 2.5 hours.
-                    </p>
-                    <img src="images/rafting.jpg" alt="rafting" class="image">
-                    <p class="text-right, paragraph-caveat">Dare to participate in this incredible rafting activity on the Urubamba River. You will be in contact with the beauty of nature and the landscapes of the Cusco mountains, with a lot of adventure and fun.
-                            During our full-day rafting tour on the Urubamba River we will run class II and III rapids and have a lot of fun with our crew and other participants for approximately 2.5 hours.
-                    </p>
+        <!-- Call to Action -->
+        <section class="cta">
+            <h1>Book Your Next Rafting Adventure!</h1>
+            <p>Contact us for more information about our thrilling experiences.</p>
+            <a href="contact.html" class="btn">Contact Us Now</a>
+        </section>
+
+        <!-- Trip Descriptions -->
+        <section class="trip-descriptions">
+            <h2>Explore Our Trips</h2>
+            <div class="grid-container">
+                <div class="trip">
+                    <img src="images/rafting14.jpg" alt="Rafting on calm waters">
+                    <h3>Family Trip</h3>
+                    <p>A perfect tour for beginners and families with young children. Enjoy spectacular views and calm waters.</p>
                 </div>
-            </section>
-            <section>
-                <h2 class="title-lacquer">Adventure Awaits You</h2>
-                <div class="adventure">
-                    <figure>
-                        <div class="rapids">
-                            <img src="images/rafting11.jpg" alt="rafting" width="200" height="170">
-                        </div>
-                    </figure>
-                    <figure>
-                        <div class="rapids">
-                            <img src="images/rafting12.jpg" alt="rafting" width="200" height="170">
-                        </div>
-                    </figure>
-                    <figure>
-                        <div class="rapids">
-                            <img src="images/rafting13.jpg" alt="rafting" width="200" height="170">
-                        </div>
-                    </figure>
-                    <figure>
-                        <div class="rapids">
-                            <img src="images/rafting15.jpg" alt="rafting" width="200" height="170">
-                        </div>
-                    </figure>
-                    <figure>
-                        <div class="rapids">
-                            <img src="images/rafting14.jpg" alt="rafting" width="200" height="170">
-                        </div>
-                    </figure>
+                <div class="trip">
+                    <img src="images/rafting12.jpg" alt="Rafting on moderate rapids">
+                    <h3>Intermediate Adventure</h3>
+                    <p>Ideal for those seeking a bit more excitement. Experience moderate rapids in a safe and thrilling environment.</p>
                 </div>
-            </section>    
-        </div>
-       
+                <div class="trip">
+                    <img src="images/rafting13.jpg" alt="Extreme rafting">
+                    <h3>Extreme Challenge</h3>
+                    <p>For the bravest. Face high-intensity rapids with the guidance of our experts.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Trips Table -->
+        <section class="trips-table">
+            <h2>Trips Comparison</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Trip</th>
+                        <th>Difficulty Level</th>
+                        <th>Duration</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Family Trip</td>
+                        <td>Easy</td>
+                        <td>2 hours</td>
+                        <td>$50 per person</td>
+                    </tr>
+                    <tr>
+                        <td>Intermediate Adventure</td>
+                        <td>Moderate</td>
+                        <td>4 hours</td>
+                        <td>$80 per person</td>
+                    </tr>
+                    <tr>
+                        <td>Extreme Challenge</td>
+                        <td>Advanced</td>
+                        <td>6 hours</td>
+                        <td>$120 per person</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </main>
+
     <hr>
     <hr>
     <footer>
